Spacelift JBoss manager hardening